--- a/examples/example-redteam-blueteam-verbose.yaml
+++ b/examples/example-redteam-blueteam-verbose.yaml
@@ -1,13 +1,13 @@
 
 scenario:                                    
-  type: redteam-blueteam                          # Required - Possible values: {generic, jeopardy, attack-defense, Wargame, redteam-vs-blueteam} add red-team only?
+  type: redteam-blueteam
   properties:
     name: Fancy-name-of-CTF
     startDate: 01.01.1970
     endDate: 07.01.1970
     startTime: 12:00
     endtime: 23:59
-    agents:                                     # Agents are added as a property of a scenario
+    agents:                                   
       - ddos-start
       - reporting
     phases: 
@@ -23,8 +23,8 @@ resources:
     activateCondition:                      
       type: time
       timeafterstart: 01:00:00            
-    DeliveryMethod: Puppet
-    file: attack-module.pp 
+    DeliveryMethod: Ansible
+    file: attack-module.txt 
 
   reporting:
     type: agent
@@ -37,17 +37,17 @@ resources:
     DeliveryMethod: email
     file: foo
   
-  ubuntu-node:                                          # Required - Object name is used to refer to this object from elsewhere
-    type: node                                          # Required - [node, router, vulnerability, ]
+  ubuntu-node:                                        
+    type: node                              
     properties:
-      flavor: m1.medium                                 # Optional - m1.medium and m1.small is default for Windows and Linux respectively
-      os: Ubuntu Server 18.04 LTS (Bionic Beaver) amd64         # Required - The OS. Maps to images in OpenStack   
-      public_ip: true                                   # Optional - Whether or not the node should have a Floating IP    
-      networks:                                         # Required - Can be empty if Node is not connected to any networks.
-      - router: router01                                # Required - The router to connect to
-        subnet: ctf-lan                                 # Required - Comma separated list e.g subnet: a,b,c
-        port_security:                                  # Required - 
-          tcp:                                          # Optional 
+      flavor: m1.medium                              
+      os: Ubuntu Server 18.04 LTS (Bionic Beaver) amd64    
+      public_ip: true                
+      networks:                        
+      - router: router01              
+        subnet: ctf-lan                
+        port_security:                     
+          tcp:                  
           - 22
           - 80
           - 8080
@@ -55,32 +55,32 @@ resources:
           - 53
       - router: router01
         subnet: dmz-lan
-      role:                                             # Optional
+      role:                   
         name: web                               
-      userAccount:                                      # Optional - Define User accounts on the system 
-        type: employee                                  # 
+      user_account:                      
+        type: employee             
         name: John Doe
-        groups:                                         # Optional - Which groups the user should be a member of
+        groups:                    
           - www-data
           - employees
-      vulnerability:                                    # Optional - Which vulnerabilities should the Node have.
-        - shellshock                                    # Required - Name is used to fetch vulnerabiltiy from DB. If not also declared as a resource, the DB default is used.
+      vulnerability:     
+        - shellshock  
         - heartbleed
       
-  shellshock:                                           # Object of type vulnerability. This definition will override the default
+  shellshock: 
     type: vulnerability                   
-    properties:                                         # The idea here is to have vulnerability specific properties that can override what is default in the DB.
-      bash_version: x.y.z                               # Optional 
+    properties: 
+      bash_version: x.y.z 
 
   router01:
-    type: router                                        # Required
+    type: router  
     properties:
       networks:
-        ctf-lan:                                        # Required - Name of subnet
-          cidr: 192.168.30.0/24                         # Optional - 
-          gatewayIP: 192.168.30.1                       # Optional - Only possible if cidr is set
-          routes:                                       # Optional
-            - 192.168.3.0/24: 10.11.12.13               # Key is dst subnet, value is nexthop ipaddr
+        ctf-lan:
+          cidr: 192.168.30.0/24 
+          gatewayIP: 192.168.30.1 
+          routes: 
+            - 192.168.3.0/24: 10.11.12.13
         dmz-lan:
           cidr: 192.168.50.0/24
           gatewayIP: 192.168.50.1
